# llm_inference_engine

./: .auth_keys.example.json  .auto_eval_policies.example.json  .dockerignore  .env.example  .gitignore  .model_routing_pricing.example.json  .model_routing_sentinel.example.json  .model_routing_trust.example.json  .openrouter_models.example.json  .vllm_models.demanded.example.json  .vllm_models.example.json  .vllm_models.fakeshield.example.json  .vllm_models.sida13b.example.json  Dockerfile  Dockerfile.ubi  Makefile  README.md  docker-compose.haproxy.yml  docker-compose.native.yml  docker-compose.observability.yml  docker-compose.otel.yml  docker-compose.vllm-multigpu.yml  docker-compose.vllm.yml  docker-compose.yml  pyproject.toml
docker/: haproxy.cfg  nginx.conf
docs/: CONTAINER_IMAGES.md  MODEL_DEMAND_SHORTLIST.md  PUBLIC_ENDPOINT.md
scripts/: container_smoke.sh  download_mlx_model.py  download_vlm_models.py  list_models.py  native-service.sh  promote_vllm_model.py  relocate_images.sh  serve_mlx_vlm_openai.py  serve_molmo_mlx_openai.py  serve_sida_openai.py  share-service.sh  share_endpoint.sh  smoke_test.py  stress_test.py  test_relocate_images.sh  verify_release_contract.sh  vlm_request_matrix.py  vlm_strict_json_smoke.py
tests/: conftest.py  test_admin_auth_keys.py  test_admin_model_routing_policy.py  test_admin_policies.py  test_auth.py  test_auto_eval.py  test_auto_eval_policy.py  test_cancellation.py  test_chat_multimodal.py  test_chat_streaming.py  test_completions.py  test_composite_registry.py  test_concurrency.py  test_dynamic_batching.py  test_evals.py  (+39 more)
(+82 files in other folders)
